// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readServices loads a deprecated service 1`] = `
[
  {
    "builder": "",
    "dependsOn": [
      "mongo",
    ],
    "description": "simple service",
    "metadata": {
      "deprecated": "true",
      "healthcheck": undefined,
    },
    "module": "module-three",
    "name": "simple-service",
    "repository": {
      "branch": undefined,
      "url": "git@github.com/companieshouse/repo.git",
    },
    "source": "./test/data/service-reader/modules/module-three/deprecated-service.docker-compose.yaml",
  },
]
`;

exports[`readServices loads a more complicated 1`] = `
[
  {
    "builder": "java",
    "dependsOn": [
      "simple-service",
    ],
    "description": "more complex service",
    "metadata": {
      "healthcheck": "curl http://localhost/healtcheck",
      "ingressRoute": "Host(\`api.local\`) && (PathPrefix(\`/complex\`))",
      "languageMajorVersion": "17",
    },
    "module": "module-two",
    "name": "more-complex",
    "repository": {
      "branch": "develop",
      "url": "git@github.com/companieshouse/repo2.git",
    },
    "source": "./test/data/service-reader/modules/module-two/more-complex.docker-compose.yaml",
  },
]
`;

exports[`readServices loads a simple service 1`] = `
[
  {
    "builder": "node",
    "dependsOn": [
      "mongo",
    ],
    "description": "simple service",
    "metadata": {
      "healthcheck": undefined,
      "languageMajorVersion": "18",
      "secretsRequired": "true",
    },
    "module": "module-one",
    "name": "simple-service",
    "repository": {
      "branch": undefined,
      "url": "git@github.com/companieshouse/repo.git",
    },
    "source": "./test/data/service-reader/modules/module-one/simple-service.docker-compose.yaml",
  },
]
`;

exports[`readServices loads an infrastructure service 1`] = `
[
  {
    "builder": "",
    "dependsOn": [],
    "description": "primary database storing data",
    "metadata": {
      "healthcheck": "test $$(echo "rs.initiate({_id:'rs',members:[{_id:0,host:\\"mongo:27017\\"}]}).ok || rs.status().ok" | mongo --port 27017 --quiet) -eq 1",
    },
    "module": "infrastructure",
    "name": "mongo",
    "repository": null,
    "source": "./test/data/service-reader/infrastructure/mongo.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "mongo",
    ],
    "description": undefined,
    "metadata": {
      "healthcheck": undefined,
    },
    "module": "infrastructure",
    "name": "execute-mongo-scripts",
    "repository": null,
    "source": "./test/data/service-reader/infrastructure/mongo.docker-compose.yaml",
  },
]
`;

exports[`readServices loads atypical with entrypoint and outdir 1`] = `
[
  {
    "builder": "node",
    "dependsOn": [
      "mongo",
    ],
    "description": "simple service",
    "metadata": {
      "buildOutputDir": "out/",
      "entrypoint": "docker_start.sh",
      "healthcheck": undefined,
      "languageMajorVersion": "20",
    },
    "module": "module-three",
    "name": "another-atypical",
    "repository": {
      "branch": undefined,
      "url": "git@github.com/companieshouse/reapo.git",
    },
    "source": "./test/data/service-reader/modules/module-three/another-atypical.docker-compose.yaml",
  },
]
`;

exports[`readServices loads atypical with repoContext 1`] = `
[
  {
    "builder": "repository",
    "dependsOn": [],
    "description": "atypical service",
    "metadata": {
      "dockerfile": "chs.Dockerfile",
      "healthcheck": undefined,
      "repoContext": "chsDev/",
    },
    "module": "module-three",
    "name": "atypical-service",
    "repository": {
      "branch": undefined,
      "url": "git@github.com/companieshouse/repo3.git",
    },
    "source": "./test/data/service-reader/modules/module-three/atypical.docker-compose.yaml",
  },
]
`;

exports[`readServices loads service with repo required 1`] = `
[
  {
    "builder": "",
    "dependsOn": [],
    "description": undefined,
    "metadata": {
      "dockerfile": "svc1.Dockerfile",
      "healthcheck": undefined,
      "ingressRoute": "Host(\`svc1.chl.local\`)",
      "repositoryRequired": "true",
    },
    "module": "module-one",
    "name": "repo-required",
    "repository": {
      "branch": undefined,
      "url": "git@github.com:companieshouse/repo1.git",
    },
    "source": "./test/data/service-reader/modules/module-one/repository-required.docker-compose.yaml",
  },
]
`;
